--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+server.port=8083
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.application.admin.enabled=true
+spring.datasource.url=jdbc:postgresql://${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.datasource.platform=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.thymeleaf.cache=false
+server.error.include-stacktrace=always
+spring.datasource.tomcat.max-active=2
+spring.datasource.tomcat.max-wait=2
+spring.datasource.tomcat.max-idle=2
