--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ server.error.include-stacktrace=always
 spring.datasource.tomcat.max-active=2
 spring.datasource.tomcat.max-wait=2
 spring.datasource.tomcat.max-idle=2
+spring.datasource.hikari.maximum-pool-size=5
