--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
